# BoolOperationOf2DPolygons

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  show_case.py  show_case2.py  show_polygon.py
include/: bool.hpp  bool2.hpp  bool_impl.hpp
resources/: Rect1.ppp  Rect2.ppp  Rect3.ppp  polygon1.txt  polygon10.txt  polygon11.txt  polygon12.txt  polygon13.txt  polygon14.txt  polygon15.txt  polygon16.txt  polygon17.txt  polygon18.txt  polygon2.txt  polygon20.txt  polygon3.txt  polygon4.txt  polygon5.txt  polygon6.txt  polygon7.txt  polygon8.txt  polygon9.txt
src/: bool.cpp  bool2.cpp
test_cases/case0/: b.txt  diff_1  diff_inverse_0  union_0
test_cases/case1/: a.txt  b.txt  diffV2  diff_0  diff_1  diff_inverseV2  diff_inverse_0  intersectV2  intersect_0  unionV2  union_0
test_cases/case10/: b.txt  diff_inverse_0  intersect_0  union_0
test_cases/case11/: b.txt  diffV2  diff_0  diff_inverseV2  diff_inverse_0
test_cases/case12/: a.txt  b.txt  diff_inverse_0
test_cases/case13/: a.txt  b.txt  diff_0  diff_inverse_0  intersect_0  union_0
test_cases/case14/: b.txt  diff_inverse_0  intersect_0  union_0
test_cases/case15/: b.txt  diff_0  diff_inverse_0  intersect_0  intersect_1  union_0  union_1
test_cases/case16/: a.txt  diff_0  diff_inverse_0  intersect_0  intersect_1  union_0  union_1  union_2
test_cases/case17/: a.txt  b.txt  diff_0  diff_1  diff_inverse_0  diff_inverse_1  intersect_0  union_0  union_1
test_cases/case18/: a.txt  b.txt  diff_0  diff_inverse_0  intersect_0
test_cases/case19/: a.txt  b.txt  diff_inverse_0  diff_inverse_1  diff_inverse_2  (+1 more)
(+68 files in other folders)
